# fastapi-parking-api

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  alembic.ini  cli.py  docker-compose.yml  manage.py  mypy.ini  pyproject.toml
.github/templates/build-app/: action.yml
.github/templates/test-composite/: action.yml
.github/workflows/: test.yml
migrations/: env.py
migrations/versions/: 0316d94af553_init_database.py  3bb5d9b0d27b_init_database.py  570dbee4a7b9_initialize_database.py  79078ab5d369_init_database.py  8fb899421801_add_parkings_permissions.py  bd3adc9c4e27_add_parkings.py  bfa0edba4f03_add_parking.py  c18e73c205d7_add_booking.py  ca96caf84131_add_permissions_for_parkings_and_.py  ce83c838aa1c_add_parking_permissions.py  e665d890e723_add_parking_space.py  eb6b4e5f1563_add_parking_permissions.py
src/: crud.py  dependencies.py  exceptions.py  main.py  models.py  settings.py
src/admin/: router.py
src/admin/user/: router.py
src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  settings.py  tools.py
src/auth/routers/: user.py
src/bookings/: models.py
src/db/: alembic.py  base.py  dependencies.py  models.py  session.py  tools.py  utils.py
src/parking/: crud.py  data.py  models.py  router.py  schemas.py
src/user/: crud.py  exceptions.py  models.py  router.py  schemas.py  tools.py
