[tool.poetry]
name = "parking-API"
version = "0.1.0"
description = "\"API for booking parking\""
authors = ["Michal99Zajac <michal.99.zajac@gmail.com>"]
readme = "README.md"
packages = [{include = "cli.py"}, {include = "src"}, {include = "migrations"}]
exclude = [
  { path = "src/db/alembic" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = {extras = ["email"], version = "^1.10.4"}
sqlalchemy = "^1.4.45"
alembic = "^1.9.0"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "cli:main"
